[package]
name = "ipld_traversal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of IPLD selectors and traversal methods"
repository = "https://github.com/myelnet/rs-graphsync"

[dependencies]
async-trait = "0.1"
futures = { default-features = false, version = "0.3", features = ["alloc", "std"] }
serde = { version = "1.0", features = ["derive"] }
libipld = { version = "0.14", features = ["serde-codec"] }
serde_ipld_dagcbor = "0.1"
indexmap = { version = "1.8.0", features = ["serde"] }
smallvec = "1.8.0"
thiserror = "1.0"
unixfs-v1 = "0.3"
integer-encoding = { version = "3.0", default-features = false }
anyhow = "1"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"

